[package]
name = "loadtimer"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
argh = "0.1.12"
nix = { version = "0.27.1", default-features = false, features = ["feature"] }
prettytable = "0.10.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = 'abort'
strip = true
